# semzero-public-alpha-launch

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FIRST_USER_HARDENING_README.md  LICENSE  PACKAGE_MANIFEST.json  README.md  README_PATCHES.md  SECURITY.md  STRUCTURE_AUDIT.md  action.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: ASSUMPTION_ARTIFACT_HARDENING_V1_16.md  ASSUMPTION_BUSINESS_CONTROL_V1_13.md  ASSUMPTION_CALIBRATION_V1_9.md  ASSUMPTION_COST_PROFILES_V1_12.md  ASSUMPTION_DASHBOARD_ROI_V1_7.md  ASSUMPTION_DECAY_TRACKING_V1_24.md  ASSUMPTION_DIFF_REPLAY_FIDELITY_V1_20.md  ASSUMPTION_DOGFOOD_FIXTURES_V1_10.md  ASSUMPTION_DOGFOOD_REPORT_V1_11.md  ASSUMPTION_DRIFT_MEMORY_V1_25.md  ASSUMPTION_EXCEPTIONS_V1_14.md  ASSUMPTION_FRESHNESS_V1_15.md  ASSUMPTION_GATE_CI_V1_5.md  ASSUMPTION_GATE_CORE_V1_1.md  ASSUMPTION_GATE_CORE_V1_2.md  ASSUMPTION_GATE_CORE_V1_3.md  ASSUMPTION_GATE_CORE_V1_4.md  ASSUMPTION_GATE_V1.md  ASSUMPTION_LINEAGE_LITE_V1_23.md  ASSUMPTION_POLICY_CALIBRATION_V1_8.md  ASSUMPTION_PRECISION_EVAL_V1_18.md  ASSUMPTION_REVIEWER_EXPERIENCE_V1_19.md  ASSUMPTION_VALIDATION_REPLAY_LITE_V1_21.md  ASSUMPTION_WAREHOUSE_HISTORY_V1_17.md  CATEGORY_STRATEGY.md  COMMANDS.md  COMPETITIVE_POSITIONING.md  COMPILER_LINEAGE.md  DEMO_WALKTHROUGH.md  EXPERIMENTAL.md  EXTERNAL_DEMO_REPO.md  FALSE_POSITIVE_STRATEGY.md  FIRST_10_MINUTES.md  FIRST_EXTERNAL_SHADOW_PILOT_CHECKLIST.md  GITHUB_ACTION_WORKFLOW.md  NAMING_AND_TAGLINE.md  OSS_AND_ENTERPRISE.md  PHASE2B_LINEAGE_FINOPS.md  PUBLIC_ALPHA_LAUNCH.md  PUBLIC_REPO_PUSH_COMMANDS.md  (+22 more)
scripts/: build_release.sh  debug_wt.py  install_semzero.ps1  install_semzero.sh  run_dogfood_assumption_gate.py  run_killer_demo.py  test_change_gate.py  test_chaos.py  test_crawl.py  test_drift.py  test_full_loop.py  test_pr_bot.py  test_rca.py  test_repair.py  test_report.py  test_snowflake.py
semzero/: __init__.py  cli.py  receipt_tools.py  version.py
semzero_lab/: __init__.py  __main__.py  cli.py
src/: __init__.py  __main__.py  cli.py
(+182 files in other folders)
